# brownomics

./: .dockerignore  .gitignore  Dockerfile  README.md
.vercel/: project.json
api/: Dockerfile  Procfile  README.md  create.sh  init.sh  main.py  pyproject.toml  requirements.txt
api/server/models/: simulation.py
api/server/routes/: simulation.py
app/: .env.example  package-lock.json  package.json  tsconfig.json
app/src/components/: Dashboard.jsx  NavBar.jsx
app/src/hooks/: provider.jsx  useStorage.jsx
app/src/math/: index.ts
app/src/pages/: _app.tsx  _document.tsx  index.tsx
app/src/pages/api/: simulation.ts
app/src/pages/dashboard/: index.tsx
app/src/styles/: globals.css
app/src/utils/: abi.ts
landing/: index.html
model-api/: Dockerfile  app.py  requirements.txt
model-api/models/: model.py
web3/: hardhat.config.ts  package-lock.json  package.json
web3/contracts/: ModelMarketplace.sol
web3/scripts/: deploy.ts
web3/test/: ModelMarketplace.ts
